# janksVersionOfRiscZero

./: .gitignore  README.md  bank.db  package-lock.json  package.json
auction_server/: .gitignore  app.py  auction.db  guest_id.json  init_db.py  receipt.txt  reciept.py  requirements.txt
auction_server/services/: auction_services.py  challenge_services.py
auction_server/verifier/: Cargo.toml  pyproject.toml
auction_server/verifier/src/: lib.rs
bank_server/: app.py  bank.db  bank_api.py  bank_services.py  cargo.toml  init_db.py  pyproject.toml  requirements.txt
bank_server/src/: lib.rs
bank_server/utils/: cert.py  keys.py
bank_sever/: app.py
core/src/: lib.rs
src/: App.css  App.tsx
src-risc0/: .gitignore
src-risc0/host/: Cargo.toml
src-risc0/host/src/: lib.rs  main.rs
src-risc0/methods/guest/src/: main.rs
src-tauri/: .gitignore  Cargo.toml
src-tauri/src/: lib.rs
src/components/: auction-items-page.tsx  auction-page.tsx  auth-page.tsx  connection-test.tsx  socket-test.tsx
src/components/auction/: auction-header.tsx  auction-item-card.tsx  bid-modal.tsx
src/components/auth/: login-form.tsx  private-key-alert.tsx  register-form.tsx
src/components/profile/: profile-view.tsx
src/components/ui/: message-display.tsx
src/pages/: auction-items-page.tsx  auction-page.tsx
src/services/: auction-service.ts  auction-services.ts  bank-services.ts  rust-services.ts
src/types/: auction-types.ts  bank-types.ts
src/utils/: data-utils.ts
