[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bank_server"
version = "0.1.0"
description = "Bank cryptography functions using Rust"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=40.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]