[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "verifier"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
risc0-zkvm = { version = "1.2.1" }
rusqlite = "0.33.0"