[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bidding-core = { path = "../../core" }
k256 = { version = "=0.13.4", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
hex = "0.4.3"
bincode = "1.3.3"
serde_json = "1.0"
